--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 ### Project Specific stuff
 test_run_dir/*
+
+### tmp directory
+tmp/
+.vscode/
+.metals/
+
 ### XilinxISE template
 # intermediate build files
 *.bgn
@@ -338,4 +344,3 @@ project/plugins/project/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
